# Chronicle

./: .gitignore  README.md  build.sh  recompute-metrics.command  release.sh
Chronicle/.obsidian/: workspace.json
extension/: background.js  content.js  manifest.json  package-lock.json  package.json  popup.html  popup.js
files/: extension_spec.md  pipeline_spec.md  summarize.txt  synthesize.txt
pipeline/: README.md  pyproject.toml
pipeline/chronicle/: agent.py  backfill_keywords.py  backfill_links.py  backfill_model.py  calendar.py  capacity.py  claude_invoke.py  cli.py  find.py  index.py  ingest.py  links.py  ls.py  mcp_server.py  metrics.py  notify.py  paths.py  pending.py  preprocess.py  rebuild_state.py  recompute_metrics.py  stale.py  state.py  status.py  summarize.py  synthesize.py
pipeline/tests/: test_logic.py
